--- a/maintenance.html
+++ b/maintenance.html
@@ -18,6 +18,6 @@
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience. We&rsquo;re performing some maintenance at the moment. If you need to, you can always follow us on <a href="https://status.2048bitcoin.world" target="_blank">our status page</a> for updates, otherwise we&rsquo;ll be back up shortly!</p>
-        <p>&mdash; CLB Productions</p>
+        <p>&mdash; NerdScriptz</p>
     </div>
 </article>
