--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ window.addEventListener("click", windowOnClick);
         <br> If you guys want to support me, I have a Linktree setup on how you can help me, click <a href="https://linktr.ee/jmuofficial">here</a> to see it! <br>
         <br>
         <center>
-          <a href="privacy-policy" target="_blank">Privacy Policy</a>&nbsp;|&nbsp; <a href="cookie-policy" target="_blank">Cookie Policy</a>&nbsp;|&nbsp; <a href="#" onclick="window.displayPreferenceModal();return false;" id="termly-consent-preferences">Consent Preferences</a>&nbsp;|&nbsp; <a href="https://status.clbproductions.games" target="_blank">Status</a>
+          <a href="/legal/privacy-policy" target="_blank">Privacy Policy</a>&nbsp;|&nbsp; <a href="/legal/cookie-policy" target="_blank">Cookie Policy</a>&nbsp;|&nbsp; <a href="#" onclick="window.displayPreferenceModal();return false;" id="termly-consent-preferences">Consent Preferences</a>&nbsp;|&nbsp; <a href="https://status.clbproductions.games" target="_blank">Status</a>
           <br>
         </center>
       </p>
