--- a/press.html
+++ b/press.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>CLB Productions Launches 2048 Bitcoin - The Puzzle Game that Rewards Players with Cryptocurrency</title>
+    <title>Coming Soon</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -32,13 +32,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>CLB Productions Launches 2048 Bitcoin - The Puzzle Game that Rewards Players with Cryptocurrency</h1>
-      <p>CLB Productions, a leading developer of innovative games, announced the release of 2048 Bitcoin, the latest addition to the popular 2048 puzzle game. This version offers players the unique opportunity to earn satoshis, the smallest unit of Bitcoin, by playing the game.</p>
-      <p>2048 Bitcoin offers an innovative twist on a classic game, as it adds a financial incentive for players. Not only does it challenge players problem-solving skills, it also provides a chance for them to earn cryptocurrency. This game is a must-try for any puzzle enthusiast looking for a new and exciting way to earn rewards.</p>
-      <p>The game is guaranteed to be won and the real challenge is to see how many satoshis can be earned. The players are encouraged to try it out at <a href="https://www.2048bitcoin.world">https://www.2048bitcoin.world</a> and for those who want to know more about it, read the feature on Hobby Developers by ZEBEDEE at <a href="https://blog.zebedee.io/hobby-developers-feat-2048/">https://blog.zebedee.io/hobby-developers-feat-2048/</a></p>
-      <p>2048 Bitcoin is the latest release from CLB Productions, a company that constantly creates unique and interesting games for its players.</p>
-      <br> 
-      <a href="https://www.pr.com/press-release/876645">CLB Productions Launches 2048 Bitcoin; the Puzzle Game that Rewards Players with Cryptocurrency</a>
+      <h1>COMING SOON</h1>
    </div>
   </body>
 </html>
