--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
 ░░░░░░░░░░░░░░║║╚═╣╚═╝║║╚═╗░░║║░░░░╚╝╚═╝░░╚═╝░░░░
 -->
 <!DOCTYPE html>
-i dont know yall add ur own info
+<!--i dont know yall add ur own info-->
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -110,9 +110,9 @@ i dont know yall add ur own info
       <div class="card">
         <div class="placeholder"></div>
         <div class="card-body">
-          <h5 class="card-title"><i class="fas fa-user icon"></i> Kris</h5>
-          <p class="card-text">Backend Developer<br>
-          Kris is a coding ninja who loves solving complex problems and optimizing code for efficiency.</p>
+          <h5 class="card-title"><i class="fas fa-user icon"></i> Kristopher</h5>
+          <p class="card-text">Backend & Frontend Developer<br>
+          Kristopher is a coding ninja who loves solving complex problems and optimizing code for efficiency.</p>
           <a href="#" class="icon"><i class="fas fa-info-circle"></i></a>
         </div>
       </div>
