--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- I was told to take half of earnings. DONT ALLOW BRUVE TO MINE THE BITCOIN. -->
 <html oncontextmenu="return false">
   <head>
     <!-- Google Tag Manager -->
